--- a/taqanat/taqanat.csproj
+++ b/taqanat/taqanat.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <Content Include="page1.aspx" />
     <Content Include="page2.aspx" />
+    <Content Include="page3.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -86,6 +87,13 @@
     </Compile>
     <Compile Include="page2.aspx.designer.cs">
       <DependentUpon>page2.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="page3.aspx.cs">
+      <DependentUpon>page3.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="page3.aspx.designer.cs">
+      <DependentUpon>page3.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
