--- a/taqanat/taqanat.csproj
+++ b/taqanat/taqanat.csproj
@@ -68,13 +68,22 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="field.aspx" />
     <Content Include="page1.aspx" />
     <Content Include="page2.aspx" />
     <Content Include="page3.aspx" />
     <Content Include="page4.aspx" />
+    <Content Include="page5.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="field.aspx.cs">
+      <DependentUpon>field.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="field.aspx.designer.cs">
+      <DependentUpon>field.aspx</DependentUpon>
+    </Compile>
     <Compile Include="page1.aspx.cs">
       <DependentUpon>page1.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -102,6 +111,13 @@
     </Compile>
     <Compile Include="page4.aspx.designer.cs">
       <DependentUpon>page4.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="page5.aspx.cs">
+      <DependentUpon>page5.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="page5.aspx.designer.cs">
+      <DependentUpon>page5.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
